tests/ui/restrictions/mut-restriction.stderr
error: field cannot be mutated outside `foo`
  --> $DIR/mut-restriction.rs:25:5
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |     foo.alpha = 1;
   |     ^^^^^^^^^^^^^

error: field cannot be mutated outside `foo`
  --> $DIR/mut-restriction.rs:27:24
   |
LL |         Beta(mut(self) u8),
   |              --------- mutability restricted here
...
LL |         foo::Bar::Beta(ref mut beta) => {}
   |                        ^^^^^^^^^^^^

error: field cannot be mutated outside `foo`
  --> $DIR/mut-restriction.rs:34:9
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |         (*foo).alpha = 1;
   |         ^^^^^^^^^^^^^^^^

error: field cannot be mutated outside `foo`
  --> $DIR/mut-restriction.rs:42:5
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |     foo.alpha = 1;
   |     ^^^^^^^^^^^^^

error: field cannot be mutated outside `foo`
  --> $DIR/mut-restriction.rs:44:24
   |
LL |         Beta(mut(self) u8),
   |              --------- mutability restricted here
...
LL |         foo::Bar::Beta(ref mut beta) => {}
   |                        ^^^^^^^^^^^^

error: field cannot be mutated outside `foo`
  --> $DIR/mut-restriction.rs:46:5
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |     std::ptr::addr_of_mut!(foo.alpha);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `std::ptr::addr_of_mut` (in Nightly builds, run with -Z macro-backtrace for more info)

error: field cannot be mutated outside `foo`
  --> $DIR/mut-restriction.rs:48:18
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |     let _alpha = &mut foo.alpha;
   |                  ^^^^^^^^^^^^^^

error: field cannot be mutated outside `external_mut_restriction`
  --> $DIR/mut-restriction.rs:63:5
   |
LL |     external_top_level.alpha = 1;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: $DIR/auxiliary/external-mut-restriction.rs:4:9
   |
LL |     pub mut(self) alpha: u8,
   |         --------- mutability restricted here

error: field cannot be mutated outside `external_mut_restriction`
  --> $DIR/mut-restriction.rs:67:5
   |
LL |     external_inner.beta = 1;
   |     ^^^^^^^^^^^^^^^^^^^^^^^
   |
  ::: $DIR/auxiliary/external-mut-restriction.rs:15:13
   |
LL |         pub mut(self) beta: u8,
   |             --------- mutability restricted here

error: field cannot be mutated outside `foo`
  --> $DIR/mut-restriction.rs:51:9
   |
LL |         pub mut(self) alpha: u8,
   |             --------- mutability restricted here
...
LL |         foo.alpha = 1;
   |         ^^^^^^^^^^^^^

error: aborting due to 10 previous errors

